# melone

./: .env.example  .gitignore  LICENSE.md  README.md  requirements.txt
apps/service/: pyproject.toml
apps/service/melone_service/: __init__.py  cli.py  config.py  main.py  models.py  permissions.py  queries.py  recording.py  runtime_config.py  screen_text_status.py  settings.py
apps/service/melone_service/asset/: __init__.py  model.py  resolver.py
apps/service/melone_service/collectors/: __init__.py  active_window.py  base.py  current_asset.py  keyboard.py  (+2 more)
apps/service/pyinstaller/: melone-daemon.py
apps/service/tests/: test_active_window_collector.py  test_activity.py  test_agent_resolver.py  test_agent_sessions.py  test_apple_vision.py  test_asset_model.py  test_browser_resolver.py  test_chain_resolver.py  test_cli.py  test_config.py  test_context_graph.py  test_context_pages.py  test_context_rank_cache.py  test_current_asset_collector.py  test_document_resolver.py  test_embedding_indexer.py  test_embedding_repository.py  test_embeddings.py  test_event_repository.py  test_image_diff.py  test_keyboard_collector.py  test_local_vllm.py  test_mcp_tools.py  test_migrations.py  test_models.py  test_mouse_collector.py  test_normalizer.py  test_ocr_contracts.py  test_ocr_job_repository.py  test_ocr_worker.py  test_permissions.py  test_queries.py  test_rpc_dispatch.py  test_screen_finalize.py  test_screen_search.py  test_screen_search_repositories.py  test_screen_search_scheduler.py  test_screen_sessions.py  test_screen_text_product_smoke.py  test_screen_text_status.py  (+6 more)
(+145 files in other folders)
